--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
+    "graphql-fields": "^2.0.3",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
