--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT=4323
+MONGO_URL=mongodb+srv://SuperUser:rqPP0p8mIcrGPOcv@learningcluster.y4mkh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
