--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
-    "redux-devtools": "^3.7.0",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "redux-devtools": "^3.7.0"
   }
 }
